# Lang2SQL

./: .dockerignore  .env.example  .env.production  .gitignore  API_USER_GUIDE.md  CHANGES_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  SESSION_API_USAGE.md  UPDATED_API_USAGE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init.sql  langgraph.json  pyproject.toml  redis.conf  requirements.txt  test_session_thread_unity.py
Notebooks/: research.ipynb  research2.ipynb
backend/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
backend/routers/: auth.py  databases.py  google_auth.py  sessions.py  user.py
src/: redis_client.py
src/Agent/: agent.py
src/Graph/: graph.py
src/LLM/: groqllm.py  llm_with_tools.py
src/Nodes/: Nodes.py
src/State/: GraphState.py
src/Tools/: Tools.py  db_connector.py  execute_sql.py  fetch_db.py  nlp_gen.py  summary.py
src/Tools_Functions/: db_connector.py  execute_sql.py  fetch_db.py  nlp_gen.py
