[project]
name = "sqlagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.8",
    "langgraph-api>=0.4.31",
    "langgraph-cli[inmem]>=0.4.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
    "sqlparse>=0.5.3",
    "tiktoken>=0.11.0",
    "uvicorn>=0.37.0",
]
